# ai-search-service-group-7

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  web.py
.woodpecker/: .latest.yml
aisearch/: answer.py  cfg.py  main.py  prompts.py  question.py  schema.py  search.py
scripts/: data_exploration.ipynb  structured_parser.py  whoosh_index.py  whoosh_monitor.py
src/: prompts.py  pyproject.toml  question.py  schema.py
src/aisearch/: __init__.py  answer.py  cfg.py  prompts.py  question.py  schema.py  search.py
tests/: test_answer.py  test_main.py  test_question.py  test_search.py
