[build-system]
requires = ["setuptools", "setuptools-scm","wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aisearch"
authors = [
    {name="Peter Vanden Berghe", email="Peter.VandenBerghe@soprasteria.com"},
    {name="Robbe Daemen", email="Robbe.Daemen@brobots.be"},
]
description = "AISearch package"
dynamic = ["version"]
dependencies = [
    "langchain-ollama",
    "langchain",
    "pydantic",
    "flask",
    "whoosh"
]

[tool.setuptools.packages.find]
where = ["."]
include= ["aisearch"]
namespaces = false

[tool.setuptools.dynamic]
version = {attr = "aisearch.__version__"}
